[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
pathfinding = "4.0"
smallvec = "1.7"
anyhow = "1.0"
#ahash = "0.8"
#rustc-hash = "1.1"
rayon = "1.6"
ndarray = "0.15"
lazy_static = "1.4.0"
#regex = "1.7"
#gif = "0.12"
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1.0"
enum-map = "2.7.3"
polyfit-rs = "0.2.1"

[profile.release]
lto = "fat"
panic = "abort"
incremental = true
#debug = true
